--- a/package.json
+++ b/package.json
@@ -92,5 +92,6 @@
     "react-test-renderer": "18.3.1",
     "typescript": "5.9.2"
   },
-  "private": true
+  "private": true,
+  "packageManager": "bun@1.2.17"
 }
