--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-app",
+  "name": "voice-expo-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -8,7 +8,9 @@
     "ios": "DARK_MODE=media expo start --ios",
     "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "lint-staged": "(npx lint-staged && npx pretty-quick --staged) 2>&1",
+    "format": "prettier --write \"./**/*.{ts,tsx,js,json}\""
   },
   "jest": {
     "preset": "jest-expo"
@@ -69,6 +71,9 @@
     "expo-web-browser": "15.0.7",
     "lucide-react-native": "0.523.0",
     "nativewind": "4.1.23",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "pretty-quick": "4.2.2",
     "react-native": "0.81.4",
     "react-native-css-interop": "0.1.22",
     "react-native-gesture-handler": "2.28.0",
