--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "lint-staged": "(npx lint-staged && npx pretty-quick --staged) 2>&1",
-    "format": "prettier --write \"./**/*.{ts,tsx,js,json}\""
+    "pre-commit": "(npx lint-staged && npx pretty-quick --staged) 2>&1",
+    "format": "prettier --write \"./**/*.{ts,tsx,js,json}\"",
+    "prepare": "husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -91,12 +92,19 @@
     "@types/jest": "29.5.14",
     "@types/react": "19.1.13",
     "@types/react-test-renderer": "18.3.1",
+    "husky": "^9.1.7",
     "jest": "29.7.0",
     "jest-expo": "54.0.11",
     "jscodeshift": "0.15.2",
+    "lint-staged": "^16.2.3",
     "react-test-renderer": "18.3.1",
     "typescript": "5.9.2"
   },
   "private": true,
-  "packageManager": "bun@1.2.17"
+  "packageManager": "bun@1.2.17",
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "bun run lint"
+    ]
+  }
 }
