chore(expo): update dependencies and rename app to voices-expo
- Renamed app name and slug in app.json from 'test-expo' to 'voices-expo' for branding alignment
- Updated expo-router to ~6.0.10 and added expo-server@1.0.0 in bun.lock for improved routing and server-side support
- Cleaned up package.json by removing unused dependencies (react, react-dom, react-router variants, react-native-linear-gradient) and ensuring @expo/vector-icons is present for icon support

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "test-expo",
-    "slug": "test-expo",
+    "name": "voices-expo",
+    "slug": "voices-expo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
