--- a/package.json
+++ b/package.json
@@ -18,14 +18,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-router": "7.8.2",
-    "react-router-dom": "7.8.2",
-    "@expo/vector-icons": "^14.0.2",
     "@expo/html-elements": "0.4.3",
     "@expo/metro-runtime": "6.1.2",
-    "react-native-linear-gradient": "2.8.3",
+    "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/accordion": "^1.0.8",
     "@gluestack-ui/actionsheet": "^0.2.46",
     "@gluestack-ui/alert": "^0.1.16",
@@ -65,7 +60,7 @@
     "expo-font": "14.0.8",
     "expo-haptics": "15.0.7",
     "expo-linking": "8.0.8",
-    "expo-router": "6.0.6",
+    "expo-router": "~6.0.10",
     "expo-splash-screen": "31.0.10",
     "expo-status-bar": "3.0.8",
     "expo-symbols": "1.0.7",
@@ -76,9 +71,12 @@
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "pretty-quick": "4.2.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-css-interop": "0.1.22",
     "react-native-gesture-handler": "2.28.0",
+    "react-native-linear-gradient": "2.8.3",
     "react-native-reanimated": "4.1.0",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "4.16.0",
@@ -86,6 +84,8 @@
     "react-native-web": "0.21.1",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "react-router": "7.8.2",
+    "react-router-dom": "7.8.2",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
