--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "@gluestack-ui/toast": "^1.0.8",
     "@gluestack-ui/tooltip": "^0.1.38",
     "@legendapp/motion": "2.4.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "7.4.7",
     "@react-navigation/native": "7.1.17",
+    "@supabase/supabase-js": "^2.58.0",
     "babel-plugin-module-resolver": "5.0.2",
     "expo": "54.0.8",
     "expo-blur": "15.0.7",
